<resources>
    <string name="app_name">Chew-Chew Assignment</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string-array name="restuarants">
        <item>Machachos</item>
        <item>Burger King</item>
        <item>Pizza Hut</item>
        <item>McDonalds</item>
    </string-array>
    <string name="login">Login</string>
    <string name="signuphere">Don\'t have an account? Register here</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">Register</string>
    <string name="already_have_an_account_login">Already have an account/Return to login here</string>
    <string name="signUpText2">Are you a staff member? Login here</string>
    <string name="title_activity_in_progress">InProgress</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>