<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="668dp"
        android:backgroundTint="@color/darkblue"
        android:clickable="true"
        android:onClick="ToMainMenu"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@null"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="OnClick">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <androidx.cardview.widget.CardView
        android:id="@+id/orderDetails"
        style="@style/centreLocatorCardDesign"
        android:layout_width="381dp"
        android:layout_height="226dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="181dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="146dp"
                android:hint="@string/username"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_person_24"
                    android:fontFamily="@font/lato"
                    android:textColor="#000000"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="87dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
                app:layout_constraintVertical_bias="0.0"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/lato"
                    android:password="true"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:background="@drawable/oval"
                android:fontFamily="@font/lato"
                android:onClick="ToStaffUI"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="OnClick" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="41dp"

        android:layout_marginStart="16dp"


        android:layout_marginTop="192dp"

        android:layout_marginEnd="116dp"
        android:layout_marginBottom="498dp"
        android:fontFamily="@font/lato"
        android:text="Login For Staff"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/signUpText2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="201dp"
        android:layout_height="89dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="575dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="67dp"
        android:fontFamily="@font/lato"
        android:onClick="ToLogin"
        android:text="Not a staff member? Please return to login here"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick"
        tools:targetApi="jelly_bean" />


</androidx.constraintlayout.widget.ConstraintLayout>