<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="668dp"
        android:backgroundTint="@color/darkblue"
        android:clickable="true"
        android:onClick="ToMainMenu"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@null"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <androidx.cardview.widget.CardView
        android:id="@+id/orderDetails"
        style="@style/centreLocatorCardDesign"
        android:layout_width="394dp"
        android:layout_height="403dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="209dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="119dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="135dp"
                android:hint="@string/username"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.113">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_baseline_person_24"
                    android:fontFamily="@font/lato"
                    android:textColor="#000000"
                    tools:targetApi="jelly_bean" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="66dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="76dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.108"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:password="true"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="162dp"
                android:layout_height="47dp"
                android:layout_marginStart="154dp"
                android:layout_marginTop="146dp"
                android:layout_marginEnd="155dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/oval"
                android:fontFamily="@font/lato"
                android:onClick="CustomerUI"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.157" />

            <Button
                android:id="@+id/signUpText"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="273dp"
                android:layout_height="59dp"
                android:layout_marginStart="61dp"
                android:layout_marginTop="278dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="66dp"
                android:fontFamily="@font/lato"
                android:onClick="ToRegister"
                android:text="@string/signuphere"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="jelly_bean" />

            <Button
                android:id="@+id/signUpText2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="337dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/lato"
                android:onClick="ToStaffLogin"
                android:text="Are you a staff member? Please login here"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="jelly_bean" />

            <View
                android:id="@+id/divider"
                android:layout_width="392dp"
                android:layout_height="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="253dp"
                android:layout_marginBottom="150dp"
                android:background="?android:attr/listDivider"
                android:divider="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="188dp"
                android:layout_marginTop="242dp"
                android:layout_marginEnd="187dp"
                android:layout_marginBottom="143dp"
                android:text="OR"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="157dp"
        android:layout_height="65dp"

        android:layout_marginStart="16dp"

        android:layout_marginTop="91dp"

        android:layout_marginEnd="238dp"
        android:layout_marginBottom="575dp"
        android:fontFamily="@font/lato"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="536dp"
        android:fontFamily="@font/lato"
        android:text="Please log in to continue"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>